# cellmap-analyze

./: .codecov.yml  .gitignore  DOCUMENTATION_SUMMARY.md  README.md  architecture_flowchart.md  debug_upsampling.py  density.py  distances.py  example_xarray_tensorstore.py  permissions.sh  pyproject.toml  setup.cfg  setup.py  simple_xarray_tensorstore_example.py  speed_comparison.py  test.out  test_slice_float.py  test_xarray_idi_replacement.py  tmp.py  tmp.toml  troubleshoot_test_mwatershed.py  troubleshooting.py  view_contacts.py  watershed.py
.claude/: .nfs064d7cb7f88966a9000000a8  .nfs1544f8dd217f03df00006b65
.github/workflows/: python.yml  release.yml  tests.yml
scripts/: check_mws_jobs.py  combine_affinities.py  create_mws_configs.py  generate_neuroglancer_links.py  submit_mws_jobs.py
src/cellmap_analyze/analyze/: assign_to_cells.py  assign_to_organelles.py  fit_lines_to_segmentation.py  fit_lines_to_segmentations.py  measure.py
src/cellmap_analyze/cythonizing/: bresenham3D.c  bresenham3D.pyx  centers.pyx  object_information.pyx  process_arrays.c  process_arrays.pyx  setup.py
src/cellmap_analyze/process/: clean_connected_components.py  connected_components.py  contact_sites.py  fill_holes.py  filter_ids.py  flawed_watershed_segmentation.py  global_watershed_segmentation.py  label_with_mask.py  morphological_operations.py  mutex_watershed.py  skeletonize.py  watershed_segmentation.py
src/cellmap_analyze/util/: analysis_util.py  block_util.py  bresenham3d.py  bresenhamline.py  cellmap_array.py  dask_util.py  image_data_interface.py  information_holders.py  io_util.py  mask_util.py  measure.py  measure_util.py  mixins.py  neuroglancer_util.py  precomputed_io.py  sharded_skeleton.py  skeleton_util.py  visualization_util.py  voxel_size_utils.py  xarray_image_data_interface.py  zarr_io.py  zarr_util.py
src/cli/: cli.py
tests/: conftest.py  contact_site_fixture_helper.py  test_kvstore_anonymous.py  test_non_integer_voxel_size_integration.py  test_precomputed_read.py  test_s3_read.py  test_unique_tmp_dirs.py  test_utils.py  test_voxel_size_utils.py  test_wave_scheduling.py  test_zarr_v3.py
tests/fixtures/: measure.py
tests/operations/: conftest.py  test_assign_to_cells.py  test_assign_to_organelles.py  test_clean_connected_components.py  test_connected_components.py  test_contact_sites.py  test_contact_sites_subroutines.py  test_delete_tmp_zarr.py  test_fill_holes.py  test_filter_ids.py  test_fit_lines_to_segmentations.py  test_flawed_watershed_segmentation.py  test_image_data_interface.py  test_image_data_interface_non_integer.py  test_io_util.py  test_label_with_mask.py  test_mask.py  test_measure.py  test_morphological_operations.py  test_mws.py  test_skeletonize.py  test_watershed_segmentation.py
(+1 files in other folders)
